markdown_parser/src/snapshots/markdown_parser__lexer__tests__parse_headers.snap
---
source: markdown_parser/src/lexer.rs
expression: lexer.scan()
input_file: markdown_parser/src/snapshot_inputs/lexer_input.md
---
[
  {
    "position": 0,
    "kind": "Hash",
    "line": 1
  },
  {
    "position": 1,
    "kind": "Space",
    "line": 1
  },
  {
    "position": 2,
    "kind": {
      "Text": "Hi"
    },
    "line": 1
  },
  {
    "position": 4,
    "kind": "Space",
    "line": 1
  },
  {
    "position": 5,
    "kind": {
      "Text": "there"
    },
    "line": 1
  },
  {
    "position": 10,
    "kind": "Newline",
    "line": 2
  },
  {
    "position": 11,
    "kind": "Newline",
    "line": 3
  },
  {
    "position": 12,
    "kind": {
      "Text": "This"
    },
    "line": 3
  },
  {
    "position": 16,
    "kind": "Space",
    "line": 3
  },
  {
    "position": 17,
    "kind": {
      "Text": "should"
    },
    "line": 3
  },
  {
    "position": 23,
    "kind": "Space",
    "line": 3
  },
  {
    "position": 24,
    "kind": {
      "Text": "be"
    },
    "line": 3
  },
  {
    "position": 26,
    "kind": "Space",
    "line": 3
  },
  {
    "position": 27,
    "kind": {
      "Text": "text"
    },
    "line": 3
  },
  {
    "position": 31,
    "kind": "Space",
    "line": 3
  },
  {
    "position": 32,
    "kind": "Underscore",
    "line": 3
  },
  {
    "position": 33,
    "kind": {
      "Text": "wrapped"
    },
    "line": 3
  },
  {
    "position": 40,
    "kind": "Space",
    "line": 3
  },
  {
    "position": 41,
    "kind": {
      "Text": "in"
    },
    "line": 3
  },
  {
    "position": 43,
    "kind": "Space",
    "line": 3
  },
  {
    "position": 44,
    "kind": {
      "Text": "underscore"
    },
    "line": 3
  },
  {
    "position": 54,
    "kind": "Underscore",
    "line": 3
  },
  {
    "position": 55,
    "kind": "Space",
    "line": 3
  },
  {
    "position": 56,
    "kind": {
      "Text": "and"
    },
    "line": 3
  },
  {
    "position": 59,
    "kind": "Space",
    "line": 3
  },
  {
    "position": 60,
    "kind": "Backslash",
    "line": 3
  },
  {
    "position": 61,
    "kind": "Backslash",
    "line": 3
  },
  {
    "position": 62,
    "kind": {
      "Text": "escaped"
    },
    "line": 3
  },
  {
    "position": 69,
    "kind": "Newline",
    "line": 4
  },
  {
    "position": 70,
    "kind": "Star",
    "line": 4
  },
  {
    "position": 71,
    "kind": "Star",
    "line": 4
  },
  {
    "position": 72,
    "kind": {
      "Text": "bold"
    },
    "line": 4
  },
  {
    "position": 76,
    "kind": "Space",
    "line": 4
  },
  {
    "position": 77,
    "kind": {
      "Text": "text"
    },
    "line": 4
  },
  {
    "position": 81,
    "kind": "Space",
    "line": 4
  },
  {
    "position": 82,
    "kind": {
      "Text": "here"
    },
    "line": 4
  },
  {
    "position": 86,
    "kind": "Star",
    "line": 4
  },
  {
    "position": 87,
    "kind": "Star",
    "line": 4
  },
  {
    "position": 88,
    "kind": "Space",
    "line": 4
  },
  {
    "position": 89,
    "kind": {
      "Text": "with"
    },
    "line": 4
  },
  {
    "position": 93,
    "kind": "Space",
    "line": 4
  },
  {
    "position": 94,
    "kind": {
      "Text": "a"
    },
    "line": 4
  },
  {
    "position": 95,
    "kind": "Space",
    "line": 4
  },
  {
    "position": 96,
    "kind": {
      "Text": "nice"
    },
    "line": 4
  },
  {
    "position": 100,
    "kind": "Space",
    "line": 4
  },
  {
    "position": 101,
    "kind": "LeftSquareBraket",
    "line": 4
  },
  {
    "position": 102,
    "kind": {
      "Text": "link"
    },
    "line": 4
  },
  {
    "position": 106,
    "kind": "Space",
    "line": 4
  },
  {
    "position": 107,
    "kind": {
      "Text": "here"
    },
    "line": 4
  },
  {
    "position": 111,
    "kind": "RightSquareBraket",
    "line": 4
  },
  {
    "position": 112,
    "kind": "LeftParen",
    "line": 4
  },
  {
    "position": 113,
    "kind": {
      "Text": "https://bpaulino"
    },
    "line": 4
  },
  {
    "position": 129,
    "kind": "Dot",
    "line": 4
  },
  {
    "position": 130,
    "kind": {
      "Text": "com"
    },
    "line": 4
  },
  {
    "position": 133,
    "kind": "RightParen",
    "line": 4
  },
  {
    "position": 134,
    "kind": "Newline",
    "line": 5
  },
  {
    "position": 134,
    "kind": "EndOfFile",
    "line": 5
  }
]
